--- a/html/Memories.html
+++ b/html/Memories.html
@@ -445,7 +445,7 @@
 				 <p>Wishing you a wonderful birthday. </p>
 				 <p>You make this world a nicer place just by being so kindhearted.  </p>
 				 <p>May this day that is all your own hold happiness for you and the years to come be filled with all the best things, too.</p>
-         <p style="font-size: 13px">所以陈彦羽.........快给老子打钱!!!!!O_o</p>
+         <p style="font-size: 13px">所以陈彦羽...快给老子打钱!!!!!O_o</p>
               </div>
              <div class="ly-imgbox11" style="height:100px;width:100px;left:30%;bottom: 10px">
                 <img class="ly-img11" src="../img/ewm.png" style="height:100%">
